# leo2d

./: CMakeLists_template.txt  README  modules.list  modules.load  modules.txt  modules_matlab.list
app/src/: main.cpp  main_serial.cpp
debug_tools/: gnu_dos_plotter.gnu
doc/: leo2d_manual.tex
examples/mlg_strain/: mlg_nostrain_hstruct.in  mlg_strain_hstruct.in  mlg_strain_plotter.m
examples/mos2_ws2/: mos2_ws2_hstruct.in
examples/old/k_dot_p_tblg/: tblg_hstruct.in
examples/old/mlgraphene/vacancies_from_file/: ml_graphene_hstruct.in
examples/tblg/: tblg_hstruct_comm.in  tblg_hstruct_diag.in
examples/tblg_flake/: tblg_flake_hstruct.in  tblg_flake_plotter.m
examples/tblg_sc/: tblg_sc_hstruct.in  tblg_sc_plotter.m
examples/tbmos2_sc/: tbmos2_sc_hstruct.in  tbmos2_sc_plotter.m
examples/tdbg_sc/: tdbg_sc_hstruct.in  tdbg_sc_plotter.m
examples/tswg_sc/: tswg_sc_hstruct.in  tswg_sc_plotter.m
matlab_post/: cheb_scan.m
old_files/: p_and_sigma_process.m  p_and_sigma_sweep_run.py
realspace/: CMakeCache.txt  CMakeLists.txt  CMakeLists_template.txt  Makefile  Makefile.example  README  bi_graphene001.cheb  bi_graphene002.cheb  bi_graphene003.cheb  bi_graphene004.cheb  bi_graphene005.cheb  bl_hstruct.in  cmake_install.cmake  heterostructure.cpp  heterostructure.hpp  hstruct.in  library_path_link.txt  main  main.cpp  mos2_hstruct.in  p_and_sigma_process.asv  pos_debug.gnu  run_script.sh  sheet.cpp  sheet.hpp  symlinks_needed.txt  tblg_bulk_hstruct.in  tblg_hstruct.in  test.cpp  tmdc_hstruct.in  wse2_hstruct.in
realspace/app/: Makefile  cmake_install.cmake
realspace/app/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main_serial.cpp
realspace/cmake/module/: FindMKL.cmake
realspace/debug_tools/: pos_debug.gnu
realspace/examples/bimos2/: mos2_hstruct.in
realspace/examples/bimose2/: mose2_hstruct.in
realspace/examples/biws2/: ws2_hstruct.in
realspace/examples/biwse2/: wse2_hstruct.in
realspace/examples/mlgraphene/: ml_graphene_hstruct.in
realspace/examples/mlgraphene/sq_sampling/: ml_graphene_hstruct.in
realspace/examples/mlgraphene/vacancies_from_file/: ml_graphene_hstruct.in
realspace/examples/mlmc_mos2/: README  matrix_plotter.gnu  mos2_l1_hstruct.in  mos2_l2_hstruct.in  pos_debug.gnu
realspace/examples/mlmos2/: mos2_hstruct.in
realspace/examples/mlmos2/vacancies_from_file/: mos2_hstruct.in
realspace/examples/mose2_wse2/: mose2_wse2_hstruct.in
realspace/examples/tblg/: tblg_hstruct.in  tblg_hstruct_comm.in  tblg_hstruct_diag.in
realspace/examples/tblg_on_bulk/: tblg_bulk_hstruct.in
realspace/examples/trig/: tblg_hstruct.in  trig_hstruct.in
realspace/matlab_post/: cheb_compute.m
realspace/old_files/: Makefile.example  Makefile_oldstyle  bl_hstruct.in  transpose.sh
realspace/scripts/mlmc_vacancies/: PostprocCCM.m  PostprocCCM_dev.m  PostprocCCMlevels.m  PostprocDoSlevels.m  PostprocKuboCalc.m  PrintProblemDefREADME.m  README  Set_Samples.m  Set_up_samples_MoS2.m  compute_dos.m  generate_samples.m  make_folder_merge_vacancies.m  make_hstruct_in.m  merge_v_files.m
realspace/src/: CMakeCache.txt  CMakeLists.txt  Makefile  build_intra_data.cpp  cmake_install.cmake  compiling_error.txt  dmatrix.cpp  dmatrix.h  hstruct.cpp  hstruct.h  interlayer_coupling.C  interlayer_coupling.cpp  interlayer_coupling.h  interlayer_coupling_test.h  intralayer_coupling.cpp  intralayer_coupling.h  job_params.cpp  job_params.h  loc_params.cpp  loc_params.h  locality.cpp  locality.h  main.cpp  mlmc_handler.cpp  mlmc_handler.h  mpi_job_params.cpp  mpi_job_params.h  mpi_job_results.cpp  mpi_job_results.h  sdata.cpp  sdata.h  sheet.cpp  sheet.h  spmatrix.cpp  spmatrix.h
realspace/src/geom/: hstruct.cpp  hstruct.h  sdata.cpp  sdata.h  sheet.cpp  sheet.h  strain.cpp  strain.h
realspace/src/materials/: TMDC.cpp  TMDC.h  graphene.cpp  graphene.h  interlayer_coupling.cpp  loaded_mat.cpp  loaded_mat.h  materials.cpp  materials.h  read_mat.cpp  read_mat.h  strained_graphene.cpp  strained_graphene.h
realspace/src/matrix/: dmatrix.cpp  dmatrix.h  spmatrix.cpp  spmatrix.h
realspace/src/mlmc/: mlmc_handler.cpp  mlmc_handler.h
realspace/src/momentum/: intralayer_coupling.cpp  momentum_coupling.cpp  momentum_coupling.h
realspace/src/mpi/: mat_comm.cpp  mat_comm.h
realspace/src/params/: job_params.cpp  job_params.h  mpi_job_params.cpp  mpi_job_params.h  mpi_job_results.cpp  mpi_job_results.h  param_tools.cpp  param_tools.h
realspace/src/serial/: locality_serial.cpp  matrix_gen.cpp  matrix_gen.h
realspace/src/transport/: ballistic.cpp  ballistic.h
realspace/tests/: parallel_debug_cmd.txt  tblg_test1.in  tblg_test1.test  tblg_test2.in  tblg_test2.test  tblg_test3.in  tblg_test3.test
scatter/: Makefile  README  locality  locality.cpp  locality.h  main.cpp  sheet.cpp  sheet.h
scatter/src/: hstruct.cpp  hstruct.h  locality.cpp  locality.h  main.cpp  sdata.cpp  sheet.cpp  sheet.h
scripts/mlmc_vacancies/: PostprocCCM.m  PostprocKuboCalc.m  PrintProblemDef.m  ReadHamiltonian.m  plot_CCCM.m  plot_idos.m
slepc_notes/: matrix_assemble.C  slepc_eig.C
src/: locality.cpp  locality.h
src/geom/: hstruct.cpp  sdata.cpp  sdata.h  sheet.cpp  strain.cpp  strain.h
src/materials/: TMDC.cpp  loaded_mat.cpp  loaded_mat.h  materials.cpp  materials.h  read_mat.cpp  read_mat.h  spin_orbit.cpp  spin_orbit.h  strained_graphene.cpp  strained_graphene.h
src/matrix/: dmatrix.cpp
src/mlmc/: mlmc_handler.cpp
src/mpi/: mat_comm.cpp
src/params/: job_params.cpp  job_params.h
src/serial/: locality_serial.cpp  locality_serial.h  matrix_gen.h
tests/: tblg_test2.in  tblg_test3.in  tblg_test3.test
trilayer/trilayer/: main.cpp
trilayer/trilayer.xcodeproj/: project.pbxproj
trilayer/trilayer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
trilayer/trilayer.xcodeproj/project.xcworkspace/xcuserdata/zoe.xcuserdatad/: UserInterfaceState.xcuserstate
trilayer/trilayer.xcodeproj/xcuserdata/zoe.xcuserdatad/xcschemes/: xcschememanagement.plist
