
if(MKL_OFF)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ ${EIGEN3_INCLUDES})
else()
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ ${MKL_INCLUDE_DIR})
endif()

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

FILE(GLOB_RECURSE CPP_FILES *.cpp)

ADD_LIBRARY(leo2d STATIC ${CPP_FILES})

TARGET_LINK_LIBRARIES(leo2d ${FFTW_LIBRARIES})

